KRSupdated_09122021/force-app/main/default/objects/Contact_Address__c/Contact_Address__c.object-meta.xml
<CustomObject>
    <description>This object is used to store different contact address.</description>
    <label>Contact Address</label>
    <nameField>
        <label>Contact Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>