KRSupdated_09122021/force-app/main/default/objects/Contact_Address__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field used to store the contact id and with contact we are storing the address</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Address</relationshipLabel>
    <relationshipName>Contact_Address</relationshipName>
    <type>Lookup</type>
</CustomField>