KRSupdated_09122021/force-app/main/default/objects/Contact_Address__c/fields/Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_City__c</fullName>
    <description>This Field is used to store contact city</description>
    <label>Contact City</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>