KRSupdated_09122021/force-app/main/default/objects/Contact_Address__c/fields/Contact_Locality__c.field-meta.xml
<CustomField>
    <fullName>Contact_Locality__c</fullName>
    <description>This Field is used to store contact locality</description>
    <label>Contact Locality</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>