KRSupdated_09122021/force-app/main/default/objects/Contact_Address__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>This Field is used to store contact name for the Address</description>
    <label>Contact Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>