KRSupdated_09122021/force-app/main/default/objects/Contact_Address__c/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <description>This field is used to store contact phone number for the address</description>
    <label>Contact Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>