KRSupdated_09122021/force-app/main/default/objects/Contact_Address__c/fields/Contact_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Contact_Pincode__c</fullName>
    <description>This Field is used to store pincode</description>
    <label>Contact Pincode</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>