KRSupdated_09122021/force-app/main/default/objects/Contact_Address__c/fields/Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Contact_State__c</fullName>
    <description>This Field is used to store contact state</description>
    <label>Contact State</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>