KRSupdated_09122021/force-app/main/default/objects/Contact_Address__c/fields/Contact_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Street_Address__c</fullName>
    <description>This field is used to store Contact Street Address</description>
    <label>Contact Street Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>