KRSupdated_09122021/force-app/main/default/objects/Contact_Address__c/fields/Default_Address__c.field-meta.xml
<CustomField>
    <fullName>Default_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field id used to check default address</description>
    <label>Default Address</label>
    <type>Checkbox</type>
</CustomField>