KRSupdated_09122021/force-app/main/default/objects/Contact_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>